--- a/j-barda/pom.xml
+++ b/j-barda/pom.xml
@@ -4,4 +4,16 @@
   <artifactId>j-barda</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>J-Barda</name>
+  	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
