--- a/j-barda/pom.xml
+++ b/j-barda/pom.xml
@@ -4,6 +4,18 @@
   <artifactId>j-barda</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>J-Barda</name>
+  <dependencies>
+  		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>17.0</version>
+		</dependency>
+  		<dependency>
+  			<groupId>org.slf4j</groupId>
+  			<artifactId>slf4j-api</artifactId>
+  			<version>1.7.21</version>
+  		</dependency>
+  </dependencies>
   	<build>
 		<plugins>
 			<plugin>
